2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b4

	* "Not valid yet" was appearing under photos for non-logged in users.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b3

	* Upgrades from version 1.3.3 will now work!

2003-11-12 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b2

	* From now on languages changes that only are done 
	  in locale folder are not longer documented here.
	  
	  The changes are now in the corresponding Changelog file.

	* Change: Use RC-cvs Version Number like we did for 1.4

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b1

	* Fixed bug where you couldn't move your albums after you'd configured
	  them once. Thanks to Ozgreg.

2003-11-12  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC3

	* v1.4.1 Release Candidate 3

	* Added warning notice to upgraders in Config. Wizard Step 3.

2003-11-11  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC3-b7

	* Fixed Image::getTag() to properly set image dimensions to $size if
	  specified. Previously, the setting was being improperly ignored in
	  some cases.

	* Fixed Config. Wizard's check_jpegtran() which was failing in
	  some cases when it shouldn't have been. (Bug #818041)
	
2003-11-11 Jens Tkotz <jens@peino.de> 1.4.1-RC3b6

	* Language: Update German (de_DE), Brazilian Portuguese (pt_BR)
	  and swedish (sv_SE) (yeah, 2nd 100%)

2003-11-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC3-b5

	* Added code so inline_gallerythumb.frames on existing sites still
	  works.

2003-11-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC3-b4

	* Fixed bug that you get error when deleting last image if there is 
	  a subalbum.

2003-11-11 Jens Tkotz <jens@peino.de> 1.4.1-RC3-b3

	* Bugfix: When in Language Mode 0 (No ML at all) then check for
	  PHP has gettext or not is skipped. So _() was undefined.
	  Fixed now.

2003-11-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC3-b2
	