@@ -1,3 +1,13 @@
+2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b5
+
+	* Modified backup_albums.php to prevent a catch-22 situation.  You 
+	  had to be logged in as admin to run the backup.  you can't login 
+	  until you have upgraded your albums.  But you should backup 
+	  before upgrading.  Fix is that you don't have to be admin to 
+	  back up, and added instruction to remove the file again after 
+	  backup.  Also changed timeout to 10 minutes, and added 
+	  instructions about copying file from setup before running.
+
 2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b4
 
 	* "Not valid yet" was appearing under photos for non-logged in users.
